--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ Yupay/stamp/__pycache__/models.cpython-38.pyc
 Yupay/stamp/__pycache__/apps.cpython-38.pyc
 Yupay/stamp/__pycache__/admin.cpython-38.pyc
 Yupay/stamp/__pycache__/__init__.cpython-38.pyc
+Yupay/stamp/__pycache__/urls.cpython-38.pyc
